# differentiable_rmap

./: .clang-format-common.sh  .gitignore  CMakeLists.txt  README.md  _config.yml  package.xml
.github/workflows/: ci.yaml
config/: RmapPlanning.yaml  RmapPlanningFootstep.yaml  RmapPlanningLocomanip.yaml  RmapPlanningMulticontact.yaml  RmapPlanningPlacement.yaml  RmapSampling.yaml  RmapSamplingFootstep.yaml  RmapSamplingHRP2KAIFootstep.yaml  RmapSamplingHRP2KAILocomanip.yaml  RmapSamplingHRP5PFootstep.yaml  RmapSamplingHRP5PMulticontact.yaml  RmapSamplingLocomanip.yaml  RmapSamplingMulticontact.yaml  RmapTraining.yaml  RmapVisualization.yaml
doc/: CMakeLists.txt  Doxyfile.in
doxygen/: BaselineUtils_8h.html  BaselineUtils_8h__incl.map  BaselineUtils_8h__incl.md5  BaselineUtils_8h_source.html  BaselineUtils_8hpp.html  BaselineUtils_8hpp__dep__incl.map  BaselineUtils_8hpp__dep__incl.md5  BaselineUtils_8hpp__incl.map  BaselineUtils_8hpp__incl.md5  BaselineUtils_8hpp_source.html  BoostEigenSpecialization_8h.html  BoostEigenSpecialization_8h__incl.map  BoostEigenSpecialization_8h__incl.md5  BoostEigenSpecialization_8h_source.html  EvalUtils_8h.html  EvalUtils_8h__incl.map  EvalUtils_8h__incl.md5  EvalUtils_8h_source.html  GridUtils_8h.html  GridUtils_8h__dep__incl.map  GridUtils_8h__dep__incl.md5  GridUtils_8h__incl.map  GridUtils_8h__incl.md5  GridUtils_8h_source.html  GridUtils_8hpp.html  GridUtils_8hpp__dep__incl.map  GridUtils_8hpp__dep__incl.md5  GridUtils_8hpp_source.html  MathUtils_8h.html  MathUtils_8h__dep__incl.map  MathUtils_8h__dep__incl.md5  MathUtils_8h__incl.map  MathUtils_8h__incl.md5  MathUtils_8h_source.html  README_8md.html  README_8md_source.html  RmapPlanningFootstep_8h.html  RmapPlanningFootstep_8h__incl.map  RmapPlanningFootstep_8h__incl.md5  RmapPlanningFootstep_8h_source.html  (+328 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+54 more)
include/differentiable_rmap/: BaselineUtils.h  BaselineUtils.hpp  BoostEigenSpecialization.h  EvalUtils.h  GridUtils.h  GridUtils.hpp  MathUtils.h  RmapPlanning.h  RmapPlanningFootstep.h  RmapPlanningLocomanip.h  RmapPlanningMulticontact.h  RmapPlanningPlacement.h  RmapSampling.h  RmapSamplingFootstep.h  RmapSamplingIK.h  RmapTraining.h  RmapVisualization.h  RobotUtils.h  RosUtils.h  SVMUtils.h  SVMUtils.hpp  SamplingUtils.h  SamplingUtils.hpp  libsvm_hotfix.h
launch/: rmap_planning.launch  rmap_planning_footstep.launch  rmap_planning_locomanip.launch  rmap_planning_multicontact.launch  rmap_planning_placement.launch  rmap_sampling_hrp2kai_footstep.launch  rmap_sampling_hrp2kai_locomanip.launch  rmap_sampling_hrp5p_footstep.launch  rmap_sampling_hrp5p_multicontact.launch  rmap_sampling_simple_2dof_manipulator.launch  rmap_sampling_ur10.launch  rmap_training.launch  rmap_visualization.launch
msg/: RmapGridSet.msg  RmapSample.msg  RmapSampleSet.msg
node/: CMakeLists.txt  NodeRmapPlanning.cpp  NodeRmapPlanningFootstep.cpp  NodeRmapPlanningLocomanip.cpp  NodeRmapPlanningMulticontact.cpp  NodeRmapPlanningPlacement.cpp  NodeRmapSampling.cpp  NodeRmapSamplingFootstep.cpp  NodeRmapSamplingLocomanip.cpp  NodeRmapTraining.cpp  NodeRmapVisualization.cpp
rqt/: RmapTraining.yaml  RmapVisualization.yaml
rviz/: RmapPlanning.rviz  RmapPlanningFootstep.rviz  RmapPlanningLocomanip.rviz  RmapPlanningMulticontact.rviz  RmapPlanningPlacement.rviz  RmapSamplingHRP2KAIFootstep.rviz  RmapSamplingHRP2KAILocomanip.rviz  RmapSamplingHRP5PFootstep.rviz  RmapSamplingHRP5PMulticontact.rviz  RmapSamplingSimple2DoFManipulator.rviz  RmapSamplingUR10.rviz  RmapTraining.rviz  RmapVisualization.rviz
scripts/: BroadcastRotateTF.py  DrawRmapSimple2DoFManipulator.py  DumpHwmPlannerLocomanipCommands.py  DumpMotion6DoFFootstepCommands.py  DumpMotion6DoFMulticontactCommands.py  JointSpaceUniformSampling.py  MergeSampleSet.py  PrintSampleSetInfo.py  SVMKernelComparison.py  TaskSpaceDensityEstimation.py
src/: BaselineUtils.cpp  CMakeLists.txt  RmapPlanning.cpp  RmapPlanningFootstep.cpp  RmapPlanningLocomanip.cpp  RmapPlanningMulticontact.cpp  RmapPlanningPlacement.cpp  RmapSampling.cpp  RmapSamplingFootstep.cpp  RmapSamplingIK.cpp  RmapTraining.cpp  RmapVisualization.cpp  SamplingUtils.cpp
test/: CMakeLists.txt  TestBaselineUtils.cpp  TestGridUtils.cpp  TestSVMUtils.cpp  TestSamplingUtils.cpp
test/data/: rmap_sample_set_R2_test.bag  rmap_sample_set_R2_test_ik.bag  rmap_sample_set_R3_test.bag  rmap_sample_set_R3_test_ik.bag  rmap_sample_set_SE2_test.bag  rmap_sample_set_SE2_test_ik.bag  rmap_sample_set_SE3_test.bag  rmap_sample_set_SE3_test_ik.bag
tests/: CMakeLists.txt  TestBaselineUtils.cpp  TestGridUtils.cpp  TestSVMUtils.cpp  TestSVMUtils.test  TestSamplingUtils.cpp
tests/data/: rmap_sample_set_R2_test.bag  rmap_sample_set_R2_test_ik.bag  rmap_sample_set_R3_test_ik.bag  rmap_sample_set_SE2_test_ik.bag  rmap_sample_set_SE3_test.bag
tests/src/: TestBaselineUtils.cpp  TestGridUtils.cpp  TestRmapSampling.cpp  TestSVMUtils.cpp  TestSamplingUtils.cpp
tests/test/: TestRmapSampling.test  TestSVMUtils.test
urdf/: Simple2DoFManipulator.urdf.xacro  UR10.urdf.xacro  UR10Planar.urdf.xacro
